@@ -1,3 +1,7 @@
+2014-08-21
+==========
+! BREAKING CHANCE: Constructor for TDBContext has been renamed to contextWithPersistenceToFile:
+
 2014-08-20
 ==========
 * [TDBQuery parent] and [TDBQuery subtable:] selectors now return self.
